# app_python_microservice-abj

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml  run_mypy.sh
.github/workflows/: cicd-pipeline.yaml
app/: Dockerfile
app/mega_ai/: manage.py  pyproject.toml
app/mega_ai/assets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/mega_ai/assets/management/commands/: seed_assets.py
app/mega_ai/assets/migrations/: 0001_initial.py
app/mega_ai/mega_ai/: asgi.py  settings.py  urls.py  wsgi.py
app/mega_ai/mega_ai_client/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/mega_ai/mega_ai_client/management/commands/: seed_client.py
app/mega_ai/mega_ai_client/migrations/: 0001_initial.py  0002_alter_client_client_name.py  0003_alter_client_disabled_at_actiondetail_clientmodule_and_more.py  0004_alter_report_created_at_alter_user_created_at.py  0005_alter_client_created_at_alter_report_created_at_and_more.py
